--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Book Collection</title>
+ 
 </head>
 <body>
-    <h1>Awesome books</h1>
+  <h1>Book Collection</h1>
+
+  <div id="books-container">
+    
+  </div>
+
+  <form id="add-book-form">
+    <label for="title">Title:</label>
+    <input type="text" id="title" required>
+    <br>
+    <label for="author">Author:</label>
+    <input type="text" id="author" required>
+    <br>
+    <button type="submit">Add Book</button>
+  </form>
+
+  
+
+  <script src="script.js"></script>
 </body>
 </html>
