--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Book Collection</title>
- 
+    <title>Book Collection</title>
+
 </head>
+
 <body>
-  <h1>Book Collection</h1>
+    <h1>Awesome Books</h1>
 
-  <div id="books-container">
-    
-  </div>
+    <div id="books-container">
+        <h1>hf</h1>
+    </div>
 
-  <form id="add-book-form">
-    <label for="title">Title:</label>
-    <input type="text" id="title" required>
-    <br>
-    <label for="author">Author:</label>
-    <input type="text" id="author" required>
-    <br>
-    <button type="submit">Add Book</button>
-  </form>
+    <form id="add-book-form">
+        <label for="title">Title:</label>
+        <input type="text" id="title" required>
+        <br>
+        <label for="author">Author:</label>
+        <input type="text" id="author" required>
+        <br>
+        <button type="submit">Add Book</button>
+    </form>
 
-  
 
-  <script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
