--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Book Collection</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Awesome Books</title>
 </head>
 
 <body>
     <h1>Awesome Books</h1>
 
     <div id="books-container">
-        <h1>hf</h1>
+       
     </div>
 
     <form id="add-book-form">
@@ -27,5 +27,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
