--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Awesome Books</h1>
 
     <div id="books-container">
-       
+    
     </div>
 
     <form id="add-book-form">
@@ -20,9 +20,11 @@
         <label for="author">Author:</label>
         <input type="text" id="author" required>
         <br>
-        <button type="submit">Add Book</button>
+        <input type="submit"></input>
     </form>
 
+
+    <div id = "myList"></div>
 
 
     <script src="script.js"></script>
